--- a/angular.json
+++ b/angular.json
@@ -24,10 +24,14 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/jarallax/dist/jarallax.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/jarallax/dist/jarallax.min.js",
+              "node_modules/jarallax/dist/jarallax-element.min.js",
+              "node_modules/jarallax/dist/jarallax-video.min.js"
+            ]
           },
           "configurations": {
             "production": {
