--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.0.5",
     "jarallax": "^1.12.5",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.12.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
