--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~11.0.5",
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
+    "express": "^4.17.1",
     "jarallax": "^1.12.5",
+    "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "sweetalert2": "^10.12.6",
     "tslib": "^2.0.0",
